# Pixelator

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  use_ftxui.cpp  use_stb_image.cpp
pixelator/: 3a  CMakeLists.txt  drawer.cpp  drawer.h  image.cpp  image.h  image_test.cpp  main.cpp  pixelator.h  pixelator_image.cpp  pixelator_image.h  pixelator_image_test.cpp  stb_image_data_view.cpp  stb_image_data_view.h  stb_image_data_view_test.cpp
